--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "config": "^3.0.1",
     "cors": "^2.8.5",
@@ -12,6 +13,8 @@
     "express-validator": "^5.3.1",
     "helmet": "^3.15.0",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.4.1",
     "morgan": "^1.9.1"
   },
